fix landing top and bottom nav spacing

--- a/main.css
+++ b/main.css
@@ -117,21 +117,32 @@ nav {
     display: -webkit-flex;
     flex-wrap: wrap;
     -webkit-flex-wrap: wrap;
-    justify-content: space-around;
-    -webkit-justify-content: space-around;
     align-content: space-around;
     -webkit-align-content: space-around;
 }
 
-#bottom-nav {
-    width: 80%;
-    margin-left: 10%;
+/* doesn't get overrideen properly by #bottom-nav in chrome */
+nav:not(#bottom-nav) {
+    justify-content: space-around;
+    -webkit-justify-content: space-around;
 }
 
-nav > a {
+#bottom-nav {
+    justify-content: center;
+    -webkit-justify-content: center;
+}
+
+#bottom-nav > a {
+    margin: 0 70px;
+}
+
+nav {
+    font-size: 20px;
+}
+
+nav:not(#bottom-nav) > a {
     flex-grow: 1;
     -webkit-flex-grow: 1;
-    font-size: 20px;
     padding: 3px 0 0;
 }
 
@@ -288,13 +299,20 @@ h2 {
     position: relative;
     display: flex;
     display: -webkit-flex;
-    justify-content: space-around;
-    -webkit-justify-content: space-around;
+    justify-content: flex-start;
+    -webkit-justify-content: flex-start;
     align-items: center;
     -webkit-align-items: center;
     align-content: space-around;
     -webkit-align-content: space-around;
-    width: 280px;
+}
+
+#landing-topnav > * {
+    margin-right: 5%;
+}
+
+#landing-topnav > * {
+    left: 0 !important;
 }
 
 #landing-topnav,
@@ -842,7 +860,11 @@ p.fee {
     }
 
     #landing-topnav > * {
-        margin-bottom: 6px;
+        margin-bottom: 10px;
+    }
+
+    #landing-main {
+        margin-top: 80px;
     }
 
 }
